[package]
name = "bevy_camera_rig"
version = "0.1.0"
edition = "2024"
authors = ["Filipe Correia <filipe.lp.correia@gmail.com"]
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "bevy", "camera", "fps", "3d"]
categories = ["game-development", "game-engines"]
readme = "README.md"
exclude = ["assets/*", ".github/*"]


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lib]
name = "bevy_camera_rig"


[dependencies.bevy]
version = "0.16"
features = ["bevy_render", "bevy_window"]
default-features = false

[dev-dependencies]
bevy-inspector-egui = "0.31"

[dev-dependencies.bevy]
version = "0.16"
features = [
    "bevy_core_pipeline",
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_pbr",
    "bevy_winit",
    "bevy_gltf",
    "bevy_sprite",
    "bevy_state",
    "png",
    "ktx2",
    "zstd",
    "tonemapping_luts",
    "bevy_gizmos",
    "dynamic_linking"
]

default-features = false

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.16"
features = ["wayland"]
default-features = false
